View Issue Details

IDProjectCategoryView StatusLast Update
0023019Open CASCADEOCCT:Foundation Classespublic2013-02-18 19:44
Reporterkgv Assigned Tokgv  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformMacOSOS 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0023019: OSD_Chronometer fails to compile due to lack of clock_gettime() on Mac OS X
DescriptionTKernel can not be build due to compilation error.
clock_gettime() does not implemented on the Mac OS X so it should be replaced.
TagsNo tags attached.
Test case numberTest case is not required

Activities

kgv

2012-03-13 10:30

developer   ~0019944

Patch is ready for review in CR23019 branch of git repository.

System function task_info() now used in OSD_Chronometer::GetThreadCPU()
to retrieve process info on Apple platforms.

abv

2012-03-13 10:42

manager   ~0019945

No remarks, please test

apn

2012-03-13 17:43

administrator   ~0019955

Dear BugMaster,
    Workbench KAS:dev:mkv-23019-occt was created from git branch CR23019
  (and mkv-23019-products from svn trunk) and compiled on Linux platform.
  
    There are not regressions in mkv-23019-products regarding to KAS:dev:products-20120306-opt
    
    See results in /QADisk/occttests/results/KAS/dev/mkv-23019-products_13032012/lin
    See reference results in /QADisk/occttests/results/KAS/dev/products-20120306-opt_07032012/lin
    See test cases in /QADisk/occttests/tests/ED

bugmaster

2012-03-15 19:07

administrator   ~0019998

Integrated into master

Related Changesets

occt: master 270a5d4e

2012-03-13 06:18:47

kgv

Details Diff
0023019: OSD_Chronometer fails to compile due to lack of clock_gettime() on Mac OS X

Usage of task_info() system function in OSD_Chronometer::GetThreadCPU() to retrieve process info.
Affected Issues
0023019
mod - src/OSD/OSD_Chronometer.cxx Diff File

Issue History

Date Modified Username Field Change
2012-03-13 10:11 kgv New Issue
2012-03-13 10:11 kgv Assigned To => kgv
2012-03-13 10:28 kgv Status new => assigned
2012-03-13 10:30 kgv Note Added: 0019944
2012-03-13 10:30 kgv Assigned To kgv => abv
2012-03-13 10:30 kgv Status assigned => resolved
2012-03-13 10:42 abv Note Added: 0019945
2012-03-13 10:42 abv Assigned To abv => kgv
2012-03-13 10:42 abv Status resolved => reviewed
2012-03-13 13:02 mkv Assigned To kgv => mkv
2012-03-13 13:02 szv Summary OSD_Chronometer fail to compile due to lack of clock_gettime() on Mac OS X => OSD_Chronometer fails to compile due to lack of clock_gettime() on Mac OS X
2012-03-13 16:18 mkv Assigned To mkv => apn
2012-03-13 17:43 apn Note Added: 0019955
2012-03-13 17:44 apn Test case number => Test case is not required
2012-03-13 17:44 apn Assigned To apn => bugmaster
2012-03-13 17:44 apn Status reviewed => tested
2012-03-15 19:07 bugmaster Note Added: 0019998
2012-03-15 19:07 bugmaster Status tested => verified
2012-03-15 19:07 bugmaster Resolution open => fixed
2012-03-15 19:07 bugmaster Assigned To bugmaster => kgv
2012-03-29 17:26 kgv Changeset attached => occt master 270a5d4e
2012-07-04 09:58 bugmaster OS Mac OS X Snow Leopard => OS
2012-07-04 09:58 bugmaster OS Version 10.6.8 => X
2012-07-04 09:58 bugmaster Platform Mac OS => Mac