0023019: OSD_Chronometer fails to compile due to lack of clock_gettime() on Mac OS X

Usage of task_info() system function in OSD_Chronometer::GetThreadCPU() to retrieve process info.